--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>Киру с ДР 🎉 </title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -14,27 +14,27 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
+      <h1 class="one">Привет
         <span id="name">NAME</span>
       </h1>
       <p class="two" id="greetingText">I really like your name btw!</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>Это твой День Рождения! :D</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">С Днём Рождения тебя! Всякие пожелания и всё такое...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-1">Вот это поздравление я сделал для тебя.</p>
+      <p class="idea-2">Ну всё, я заканчиваю.</p>
+      <p class="idea-3">Я хотел сделать что-то
+        <strong>особенное</strong>.</p>
+      <p class="idea-4">Потому что,</p>
+      <p class="idea-5">Я очень люблю тебя
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -46,7 +46,7 @@
       <img src="img/photo.png" alt="" class="main-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
+        <h3 class="wish-hbd">С Днём Рождения!</h3>
         <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
       </div>
     </div>
@@ -117,8 +117,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Ну всё, а теперь дай мне знать если тебе это понравилось.</p>
+      <p id="replay">Или нажми здесь если хочешь посмотреть это ещё раз.</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
