--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="two" id="greetingText">I really like your name btw!</p>
     </div>
     <div class="three">
-      <p>Это твой День Рождения! :D</p>
+      <p>Это твой День Рождения! 🎉</p>
     </div>
     <div class="four">
       <div class="text-box">
@@ -38,8 +38,11 @@
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>И</span>
+        <span> </span>
+        <span>Т</span>
+        <span>А</span>
+        <span>К</span>
       </p>
     </div>
     <div class="six">
