--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">С Днём Рождения тебя! Всякие пожелания и всё такое...</p>
+        <p class="hbd-chatbox">Кира, с Днём Рождения тебя! Всякие пожелания и всё такое...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">Вот это поздравление я сделал для тебя.</p>
+      <p class="idea-1">Это поздравление я сделал для тебя.</p>
       <p class="idea-2">Ну всё, я заканчиваю.</p>
       <p class="idea-3">Я хотел сделать что-то
         <strong>особенное</strong>.</p>
@@ -39,7 +39,7 @@
       </p>
       <p class="idea-6">
         <span>И</span>
-        <span> </span>
+        <span>_</span>
         <span>Т</span>
         <span>А</span>
         <span>К</span>
