--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Привет
-        <span id="name">NAME</span>
+        <span id="name">Кира</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">Папа шлёт тебе привет из далёких земель 🏔🌬🌫🌊</p>
     </div>
     <div class="three">
       <p>Это твой День Рождения! 🎉</p>
